structure: new project SASS structure | feat: project header container + images + links + stylization

--- a/index.html
+++ b/index.html
@@ -19,5 +19,92 @@
 
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="box-bg">
+        <div class="box-content">
+          <header class="header">
+            <div class="main-content">
+              <section class="header__profile">
+                <img
+                  src="./assets/img/img-profile.svg"
+                  alt="Imagem de Perfil do Usuário"
+                  class="header__user-image"
+                />
+
+                <div class="header__informations">
+                  <h2 class="header__person">Ildiko Gaspar</h2>
+                  <small class="header__user">@igaspar</small>
+                </div>
+              </section>
+
+              <nav class="header__menu">
+                <ul>
+                  <li class="header__item">
+                    <img
+                      src="./assets/img/general.svg"
+                      class="header__ico-image"
+                      alt="Ícone do item General"
+                    />
+
+                    <a href="#" class="header__link">General</a>
+                  </li>
+
+                  <li class="header__item">
+                    <img
+                      src="./assets/img/padlock.svg"
+                      class="header__ico-image"
+                      alt="Ícone do item Password"
+                    />
+
+                    <a href="#" class="header__link">Password</a>
+                  </li>
+
+                  <li class="header__item">
+                    <img
+                      src="./assets/img/email.svg"
+                      class="header__ico-image"
+                      alt="Ícone do item Invitations"
+                    />
+
+                    <a href="#" class="header__link">Invitations</a>
+                  </li>
+
+                  <li class="header__item --active">
+                    <img
+                      src="./assets/img/billing.svg"
+                      class="header__ico-image"
+                      alt="Ícone do item Billing"
+                    />
+
+                    <a href="#" class="header__link">Billing</a>
+                  </li>
+
+                  <li class="header__item">
+                    <img
+                      src="./assets/img/apps.svg"
+                      class="header__ico-image"
+                      alt="Ícone do item Apps"
+                    />
+
+                    <a href="#" class="header__link">Apps</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+
+            <section class="header__logout">
+              <img
+                src="./assets/img/logout.svg"
+                class="header__ico-image"
+                alt="Ícone de fazer logout"
+              />
+
+              <a href="#" class="header__link">Log out</a>
+            </section>
+          </header>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
