feat: add billing table and billing section header | feat: responsiveness layout

--- a/index.html
+++ b/index.html
@@ -103,6 +103,52 @@
               <a href="#" class="header__link">Log out</a>
             </section>
           </header>
+
+          <main class="main">
+            <h1 class="main__title">Billing</h1>
+
+            <section class="main__order-history">
+              <h3 class="order-history__title">Order History</h3>
+              <p class="order-history__desc">
+                Manage billing information and view receips.
+              </p>
+            </section>
+
+            <section class="main__billing_informations">
+              <table>
+                <thead>
+                  <tr>
+                    <th>Date</th>
+                    <th>Type</th>
+                    <th>Receipt</th>
+                  </tr>
+                </thead>
+
+                <tbody>
+                  <tr>
+                    <td>Oct. 21, 2021</td>
+                    <td>Pro Annual</td>
+                    <td>Download</td>
+                  </tr>
+                  <tr>
+                    <td>Aug. 21, 2021</td>
+                    <td>Pro Portfolio</td>
+                    <td>Download</td>
+                  </tr>
+                  <tr>
+                    <td>July. 21, 2021</td>
+                    <td>Sponsored Post</td>
+                    <td>Download</td>
+                  </tr>
+                  <tr>
+                    <td>Jun. 21, 2021</td>
+                    <td>Sponsored Post</td>
+                    <td>Download</td>
+                  </tr>
+                </tbody>
+              </table>
+            </section>
+          </main>
         </div>
       </div>
     </div>
